------------------------------------------------------------------------
r79 | funkydude | 2018-11-12 17:38:06 +0000 (Mon, 12 Nov 2018) | 1 line
Changed paths:
   M /trunk/LibDBIcon-1.0/LibDBIcon-1.0.lua

More compat code for upgrades
------------------------------------------------------------------------
