@@ -1,8 +1,14 @@
 ------------------------------------------------------------------------
-r79 | funkydude | 2018-11-12 17:38:06 +0000 (Mon, 12 Nov 2018) | 1 line
+r104 | funkehdude | 2022-11-14 15:07:39 +0000 (Mon, 14 Nov 2022) | 1 line
+Changed paths:
+   M /trunk/LibDBIcon-1.0.toc
+
+bump toc
+------------------------------------------------------------------------
+r103 | funkehdude | 2022-11-14 14:59:50 +0000 (Mon, 14 Nov 2022) | 1 line
 Changed paths:
    M /trunk/LibDBIcon-1.0/LibDBIcon-1.0.lua
 
-More compat code for upgrades
+Improve button visuals on Retail
 ------------------------------------------------------------------------
 
